[package]
name = "typst-ts-incr-test"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

typst.workspace = true
reflexo-typst.workspace = true
reflexo-vec2svg.workspace = true
clap.workspace = true
tinymist-project.workspace = true
tinymist-world = { workspace = true, features = ["system"] }

[features]
